--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html> 
 <html>
-
 <head>
   <meta charset="UTF-8" />
   <title>Lizeth Castañeda</title>
@@ -8,8 +7,7 @@
    type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body class="antialiased text-slate-400 bg-pink-500">
+<body class="antialiased text-slate-400 bg-sky-900">
   <div class="flex-block max-w-xl p-4 md:pd-8 mx-auto mt-8">
     <div class="bg-white shadow overflow-hidden rounded-lg">
       <div class="px-4 py-5 sm:px-6 flex justify-between">
@@ -19,12 +17,11 @@
           </h1>
           <h2 class="text-sm leading-6 text-gray-500 -mt-1">@LizethCastañeda</h2>
           <p class="mt-1 max-w-2xl text-sm text-gray-500">
-            Desarrolladora Full Stack #JavaScript #Python #Java #SpringBoot
-         
+            Desarrolladora Full Stack #JavaScript #Python #Java #SpringBoot #Git
           </p>
         </div>
         <div>
-          <img class="rounded-lg w-48" src="https://res.cloudinary.com/dx9mnazdx/image/upload/v1662583912/concept_book_i0rbwu.jpg"
+          <img class="rounded-lg w-48" src="https://res.cloudinary.com/dx9mnazdx/image/upload/v1662837177/WhatsApp_Image_2022-05-20_at_5.08.34_PM_zjo4lx.jpg"
             alt="Lizeth Castañeda" />
         </div>
       </div>
